Fixed rake rdoc (broken by referencing a missing file)

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,21 +1,19 @@
-Internet Connection
-===================
+= Internet Connection
 
 Checks if it can connection to the internet
 by trying to resolve a hostname to an ip
 I couldn't think of a faster way than dsn resolve
 
-Install
--------
+== Install
+
   gem install internet_connection
 
-Example:
---------
+== Example:
 
   InternetConnection.on?  => true
   InternetConnection.off? => false
 
-Notes:
-------
+== Notes:
+
 If using ruby 1.9 with eventmachine please install
 em-resolv-replace gem for evented thread save resolvs
